--- a/Tic Tac Toe Final/index.html
+++ b/Tic Tac Toe Final/index.html
@@ -13,25 +13,20 @@
         </header>
 
         <div class='outerGrid'>
-            <div class="square">1</div>
-            <div class="square">2</div>
-            <div class="square">3</div>
-            <div class="square">4</div>
-            <div class="square">5</div>
-            <div class="square">6</div>
-            <div class="square">7</div>
-            <div class="square">8</div>
-            <div class="square">9</div>    
+            <div id="squareProp" class="square">1</div>
+            <div id="squareProp" class="square">2</div>
+            <div id="squareProp" class="square">3</div>
+            <div id="squareProp" class="square">4</div>
+            <div id="squareProp" class="square">5</div>
+            <div id="squareProp" class="square">6</div>
+            <div id="squareProp" class="square">7</div>
+            <div id="squareProp" class="square">8</div>
+            <div id="squareProp" class="square">9</div>    
         </div>
         
         <p id='demo'></p>
 
-        <script>
-            function onClick() {
-                document.getElementById("myBtn").addEventListener("click", function(){
-                    document.getElementById("squared").innerHTML = "Hello World";
-            }
-        </script>
+        <script src='Tic Tac Toe New.js' charset="UTF-8"></script>
 
     </body>
 </html>
