Adding the three methods for the Linked List

--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -13,15 +13,15 @@
         </header>
 
         <div class='outerGrid'>
-            <div id="squareProp1" class="square"><img id='squary' src="images\blank.jpg" height="200" width="200" /></div>
-            <div id="squareProp2" class="square">2</div>
-            <div id="squareProp3" class="square">3</div>
-            <div id="squareProp4" class="square">4</div>
-            <div id="squareProp5" class="square">5</div>
-            <div id="squareProp6" class="square">6</div>
-            <div id="squareProp7" class="square">7</div>
-            <div id="squareProp8" class="square">8</div>
-            <div id="squareProp9" class="square">9</div>    
+            <div id="squareProp1" class="square"><img id='squary1' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp2" class="square"><img id='squary2' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp3" class="square"><img id='squary3' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp4" class="square"><img id='squary4' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp5" class="square"><img id='squary5' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp6" class="square"><img id='squary6' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp7" class="square"><img id='squary7' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp8" class="square"><img id='squary8' src="blank.jpg" height="200" width="200" /></div>
+            <div id="squareProp9" class="square"><img id='squary9' src="blank.jpg" height="200" width="200" /></div>    
         </div>
         
         <p id='demo'></p>
